force-app/main/default/objects/Commission_History__c/Commission_History__c.object-meta.xml
<CustomObject>
    <label>Commission History</label>
    <nameField>
        <displayFormat>CH-{0000000}</displayFormat>
        <label>Commission History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>