force-app/main/default/objects/Commission_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission History</relationshipLabel>
    <relationshipName>Commission_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>