force-app/main/default/objects/Commission_History__c/fields/Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role__c</fullName>
    <label>Agent Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>FLD</fullName>
            </value>
            <value>
                <fullName>FLDS</fullName>
            </value>
            <value>
                <fullName>FLED</fullName>
            </value>
            <value>
                <fullName>FLI</fullName>
            </value>
            <value>
                <fullName>FRR</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>MMAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>