force-app/main/default/objects/Commission_History__c/fields/CCF_Agent__c.field-meta.xml
<CustomField>
    <fullName>CCF_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_History</relationshipName>
    <type>Lookup</type>
</CustomField>