force-app/main/default/objects/Commission_History__c/fields/Role_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_End_Date__c</fullName>
    <label>Role End Date</label>
    <type>Date</type>
</CustomField>