force-app/main/default/objects/Commission_History__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHX</fullName>
            </value>
            <value>
                <fullName>FRE</fullName>
            </value>
            <value>
                <fullName>LAX</fullName>
            </value>
            <value>
                <fullName>RIV</fullName>
            </value>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>SAN</fullName>
            </value>
            <value>
                <fullName>SFO</fullName>
            </value>
            <value>
                <fullName>SJC</fullName>
            </value>
            <value>
                <fullName>SNA</fullName>
            </value>
            <value>
                <fullName>TUC</fullName>
            </value>
            <value>
                <fullName>VEN</fullName>
            </value>
            <value>
                <fullName>LAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>