force-app/main/default/objects/Commission_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCF_Agent__c</columns>
    <columns>Agent_Role__c</columns>
    <columns>Role_Start_Date__c</columns>
    <columns>Role_End_Date__c</columns>
    <columns>Service_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>